# finalproject_Masenkova_M25-555

./: .env  .gitignore  Makefile  README.md  demo.cast  main.py  pyproject.toml
config/: settings.json
data/: currencies.json  exchange_rates.json  portfolios.json  rates.json  users.json
tests/: test_models.py  test_service.py  test_utils.py
valutatrade_hub/: __init__.py  cli.py  decorators.py  logging_config.py  main.py  service.py
valutatrade_hub/cli/: interface.py
valutatrade_hub/core/: currencies.py  exceptions.py  models.py  usecases.py  utils.py
valutatrade_hub/infra/: __init__.py  database.py  settings.py
valutatrade_hub/parser_service/: __init__.py  api_clients.py  config.py  storage.py  updater.py
