[tool.poetry]
name = "finalproject-masenkova-m25-555"
version = "0.1.0"
description = "Currency Trading Platform with Parser Service"
authors = ["Olesya Masenkova <your_email@example.com>"]
readme = "README.md"
packages = [
    { include = "valutatrade_hub" }
]

[tool.poetry.dependencies]
python = "^3.10"
prettytable = "^1.0"
requests = "^2.31"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6"
pytest = "^9.0.1"
pytest-cov = "^7.0.0"

[tool.poetry.scripts]
project = "main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
